--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Angularjs源码分析 by Kuroky360</title>
+    <title>Angular源码分析 by Kuroky360</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Angularjs源码分析</h1>
+        <h1>Angular源码分析</h1>
         <h2>核心机制</h2>
         <a href="https://github.com/Kuroky360" class="button"><small>Follow me on</small> GitHub</a>
       </div>
@@ -28,10 +28,7 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h1>
-<a id="kuroky360githubio" class="anchor" href="#kuroky360githubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>Kuroky360.github.io</h1>
-
-<p>the core mechanism of Angularjs.</p>
+          <p>code analysis</p>
         </section>
 
         <aside id="sidebar">
