--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Angularjs源码分析 by Kuroky360</title>
+    <title>Angularjs  by Kuroky360</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Angularjs源码分析</h1>
+        <h1>Angularjs </h1>
         <h2>核心机制</h2>
         <a href="https://github.com/Kuroky360" class="button"><small>Follow me on</small> GitHub</a>
       </div>
