Add the png for showcase

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
     <h3>Some things I've made recently...</h3>
     <div class="row-fluid showcase">
         <div class="span4 item">
-            <!--<a href="#"><img src="img/viz_election.png"></a>-->
-            <a href="#">coming soon</a>
+            <a href="#"><img src="img/electionViz.png"></a>
         </div>
     </div>
     <hr>
