--- a/index.html
+++ b/index.html
@@ -20,78 +20,41 @@
 </head>
 <body>
 
-<div class="container-narrow">
+<div class="container-narrow" ng-controller="MainCtrl">
 
     <div class="masthead">
         <ul class="nav nav-pills pull-right">
-            <li class="active"><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
+            <li ng-class="{active:state.name==='home'}"><a ui-sref="home">Home</a></li>
+            <li ng-class="{active:state.name==='about'}"><a ui-sref="home">About</a></li>
+            <li ng-class="{active:state.name==='contact'}"><a ui-sref="contact" style="cursor: pointer">Contact</a></li>
         </ul>
         <h3 class="muted"><a href="">Kuroky360</a></h3>
     </div>
     <hr>
-    <div class="jumbotron">
-        <p class="lead">I design and build web applications.</p>
-        <p class="lead">I use JavaScript, Java, HTML, CSS, Angular, D3, Sigma and more.</p>
-        <!--<p class="lead">Available <a href="contact">for hire</a>.</p>-->
-    </div>
-
-    <hr>
-    <h3>Some things I've made recently...</h3>
-    <div class="row-fluid showcase">
-        <div class="span4 item">
-            <a href="#"><img src="img/electionViz.png"></a>
-        </div>
-    </div>
-    <hr>
-
-    <h3>I've worked with...</h3>
-    <div class="row-fluid showcase">
-
-        <div class="span4 item">
-            <a target="_blank" href="http://www.360.com"><img class="logo_360" src="img/360.png"></a>
-        </div>
-
-        <div class="span4 item">
-            <a target="_blank" href="http://www.cnnic.cn"><img class="logo_cnnic" src="img/cnnic.jpg"></a>
-        </div>
-
-        <div class="span4 item">
-            <a target="_blank" href="http://www.10086.cn"><img class="logo_chinamobile" src="img/chinamobile.png"></a>
-            <div class="rollover">
-                <h4><a href="http://dharmafly.com">Dharmafly</a></h4>
-                <ul>
-                    <li>HTML5, CSS, JavaScript, jQuery</li>
-                </ul>
-                <p><a href="http://dharmafly.com">Visit site</a></p>
-            </div>
-        </div>
-    </div>
-
-    <hr>
-    <h3>I like to use...</h3>
-    <p>
-        <a href="https://developer.mozilla.org/en/docs/JavaScript">JavaScript</a>,
-        <a href="https://angularjs.org/">Angularjs</a>,
-        <a href="http://d3js.org">D3</a>,
-        <a href="http://www.w3.org/html/wg/drafts/html/master/">HTML5</a>,
-        <a href="https://developer.mozilla.org/en-US/docs/CSS/CSS3">CSS3</a>,
-        <a href="http://www.oracle.com">Java</a>,
-        <a href="https://nodejs.org">Nodejs</a> and others</p>
-    <hr>
-    <h3>Tutorials and talks</h3>
-    <p><a href="javascript:void(0)">coming soon</a></p>
-    <hr>
-
-    <h3>Projects</h3>
-    <p><a href="javascript:void(0)">coming soon</a></p>
-    <hr>
-
-    <h3>Blog</h3>
-    <p><a href="javascript:void(0)">coming soon</a></p>
-    <hr>
+    <ui-view></ui-view>
 </div>
+<script src="js/angular.min.js"></script>
+<script src="js/angular-ui-router.min.js"></script>
+<script>
+    angular.module('dvizer',['ui.router'])
+            .config(['$stateProvider','$urlRouterProvider',function ($stateProvider,$urlRouterProvider) {
+                $stateProvider.state('home',{
+                    url:'/',
+                    templateUrl:'html/home.html'
+                }).state('contact',{
+                    templateUrl:'html/contact.html'
+                });
+                $urlRouterProvider.otherwise('/');
+            }])
+            .controller('MainCtrl',['$scope','$state',function ($scope,$state) {
+                $scope.$on('$stateChangeSuccess',function(){
+                   $scope.state=$state.current;
+                });
+            }]);
+    angular.element(document).ready(function(){
+       angular.bootstrap(document,['dvizer'])
+    });
+</script>
 </body>
 </html>
 
