--- a/html/home.html
+++ b/html/home.html
@@ -41,7 +41,7 @@
     <a href="https://developer.mozilla.org/en/docs/JavaScript">JavaScript</a>,
     <a href="https://angularjs.org/">Angularjs</a>,
     <a href="http://d3js.org">D3</a>,
-    <a href="http://sigmajs.org/">Sigmajs </a>
+    <a href="http://sigmajs.org/">Sigmajs</a>,
     <a href="http://www.w3.org/html/wg/drafts/html/master/">HTML5</a>,
     <a href="https://developer.mozilla.org/en-US/docs/CSS/CSS3">CSS3</a>,
     <a href="http://www.oracle.com">Java</a>,
