Used the word "China" instead

--- a/html/about.html
+++ b/html/about.html
@@ -2,7 +2,7 @@
     <div class="jumbotron">
         <p class="lead">I'm a web developer who specialises in data visualization</p>
         <ul>
-            <li>Based in Beijing, CN</li>
+            <li>Based in Beijing, China</li>
             <li>Loves data visualisation</li>
             <li>Keen to work with others on interesting projects</li>
         </ul>
