--- a/html/about.html
+++ b/html/about.html
@@ -3,7 +3,7 @@
         <p class="lead">I'm a web developer who specialises in data visualization</p>
         <ul>
             <li>Based in Beijing, China</li>
-            <li>Loves data visualisation</li>
+            <li>Loves data visualization</li>
             <li>Keen to work with others on interesting projects</li>
         </ul>
         <br>
