--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
                     url:'/',
                     templateUrl:'html/home.html'
                 }).state('contact',{
+                    url:'/contact',
                     templateUrl:'html/contact.html'
                 }).state('about',{
+                    url:'/about',
                     templateUrl:'html/about.html'
                 });
                 $urlRouterProvider.otherwise('/');
