--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <script src="vendor/angular/angular.min.js"></script>
 <script src="vendor/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="vendor/oclazyload/dist/ocLazyLoad.min.js"></script>
+<script src="vendor/angularUtils-disqus/dirDisqus.js"></script>
 <script src="vendor/sigma/sigma.min.js"></script>
 <script src="vendor/d3/d3.min.js"></script>
 <script src="vendor/jquery/dist/jquery.min.js"></script>
