--- a/html/home.html
+++ b/html/home.html
@@ -7,7 +7,7 @@
 <h3>Some things I've made recently...</h3>
 <div class="row-fluid showcase">
     <div class="span4 item">
-        <a ui-sref="none"><img src="img/electionViz.jpg"></a>
+        <a><img src="img/electionViz.jpg"></a>
     </div>
 </div>
 <hr>
