--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <hr>
     <ui-view></ui-view>
 </div>
-<script src="vendor/angular.min.js"></script>
+<script src="vendor/angular/angular.min.js"></script>
 <script src="vendor/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="vendor/oclazyload/dist/ocLazyLoad.min.js"></script>
 <script src="vendor/angularUtils-disqus/dirDisqus.js"></script>
