--- a/lab/timeline/html/index.html
+++ b/lab/timeline/html/index.html
@@ -2,3 +2,4 @@
     <h1>Timeline Demo</h1>
     <palantir-timeline config="config"></palantir-timeline>
 </div>
+<dir-disqus config="disqusConfig"></dir-disqus>
