Update the about module

--- a/html/contact.html
+++ b/html/contact.html
@@ -4,7 +4,8 @@
         <p class="lead">Please feel free to get in touch!</p>
         <ul>
             <li>Email me at kuroky360.cn@gmail.com</li>
-            <li>Tweet me <a target="_blank" href="https://twitter.com/Kuroky360">@Kuroky360</a></li>
+            <li>Speak to me on : )</li>
+            <li>Tweet me @Kuroky360</li>
         </ul>
     </div>
 </div>
