--- a/html/about.html
+++ b/html/about.html
@@ -7,5 +7,10 @@
             <li>Keen to work with others on interesting projects</li>
         </ul>
         <br>
+        <p class="lead">2 things I've done recently</p>
+        <ul>
+            <li>designed and implemented <a target="_self" ui-sref="election">Election visualization</a></li>
+            <li>built a <a target="_self" ui-sref="timeline">reusable timeline chart</a> for D3</li>
+        </ul>
     </div>
 </div>
