--- a/html/home.html
+++ b/html/home.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
     <p class="lead">I design and build web applications.</p>
     <p class="lead">I use JavaScript, Java, HTML, CSS, Angular, D3, Sigma and more.</p>
-    <!--<p class="lead">Available <a href="contact">for hire</a>.</p>-->
+    <p class="lead">Available <a ui-sref="contact">for hire</a>.</p>
 </div>
 <hr>
 <h3>Some things I've made recently...</h3>
