Use the latest snapshot instead

--- a/html/home.html
+++ b/html/home.html
@@ -10,7 +10,7 @@
         <a ui-sref="timeline"><img src="img/timelineViz.png"></a>
     </div>
     <div class="span4 item">
-        <a ui-sref="election"><img src="img/electionViz.jpg"></a>
+        <a ui-sref="election"><img src="img/gameOfThrones.png"></a>
     </div>
 </div>
 <hr>
